feat: adicionando header, e sections na estrura html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap"
+      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+
+    <title>Avanti - Ecommerce</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header-sign-discount">
+        <p>
+          Ganhe<span>R$10,00</span> de desconto no seu primeiro pedido. Utilize
+          o cupom <span>DESCONTO10</span>
+        </p>
+      </div>
+      <div class="header-logo-wrapper container">
+        <img src="./assets/images/avanti.svg" alt="Avanti Logo" />
+        <div class="header-search">
+          <div class="header-search-input-field">
+            <input type="text" name="" id="" />
+            <img src="./assets/images/search.svg" alt="Clique para buscar" />
+          </div>
+        </div>
+        <div class="header-search-account">
+          <div class="header-search-account-user">
+            <img src="./assets/images/user.svg" alt="Conta do usuário" />
+            <span>
+              <p>Olá,</p>
+              <p>Nome cliente!</p>
+            </span>
+          </div>
+          <img src="./assets/images/cart.svg" alt="Carrinho de compras" />
+        </div>
+      </div>
+      <menu class="container">
+        <div>
+          Todos os departamentos
+          <ul>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+          </ul>
+        </div>
+        <div>menu oculto</div>
+      </menu>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="section-hero-content">
+          <img src="./assets/images/chair.webp" alt="" />
+          <div class="section-hero-content-text">
+            <h1 class="">SUPER<span>SALE</span></h1>
+            <p class="">ITENS SELECIONADOS COM ATÉ</p>
+            <h2 class="">50%OFF</h2>
+          </div>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer>
+      <div></div>
+      <div></div>
+      <div></div>
+    </footer>
+  </body>
 </html>
